CHANGES -- trio


The changes listed without a name attributed to them were most likely done by
Bjorn Reese and/or Daniel Stenberg.

Version 1.x - 2001/05/19
------------------------
* Howard Kapustein
  Added the I8, I16, I32, and I64 modifiers.

* Jose Ortiz
  Fixed rounding problem for %e.

* Jose Ortiz
  Fixed various problems with the xlC and Sun C++ compilers.


Version 1.3 - 2001/05/16
------------------------
* trio's treatment of the field width when the %e code was used was not
  correct (Gisli Ottarsson reported). It turns out the fraction part should
  be zero-padded by default and the exponent part should be zero-prefixed
  if it is only one digit. At least that's how the GNU and Sun libc's work.
  The trio floating point output looks identical to them now.

* Fixed group scanning with modifiers.

* Fixed compilation for 64-bit Digital Unix.

* Igor Zlatkovic
  Fixed compilation of dprintf, which uses read/write, for MSCC.

* Fixed various compilation problems on Digital Unix (mainly associated with
  va_list).


Version 1.2 - 2001/04/11
------------------------
* Added autoconf integration. If compiled with HAVE_CONFIG_H the following
  happens. Firstly, <config.h> is included. Secondly, trio will only be
  compiled if WITH_TRIO is defined herein. Thirdly, if TRIO_REPLACE_STDIO is
  defined, only stdio functions that have not been detected by autoconf, i.e.
  those not defined by HAVE_PRINTF or similar, will be replaced by trio
  functions (suggested by Daniel Veillard).

* Fixed '%m.nf' output. Previously trio did not treat the width properly
  in all cases (reported by Gisli Ottarsson).

* Added explicit promotion for the scanfv family.

* Fixed more C++ compilation warnings.


Version 1.1 - 2001/02/25
------------------------
* Added explicit promotion for the printfv familiy. A float must be specified
  by %hf.

* Fixed positionals for printfv (reported by Gisli Ottarsson).
